RESOLVED FIXED34547
static shouldTrackVisitedLinks is not initialized
https://bugs.webkit.org/show_bug.cgi?id=34547
Summary static shouldTrackVisitedLinks is not initialized
Adele Peterson
Reported 2010-02-03 16:40:44 PST
For ports that don't call into WebKit to initialize this, we should initialize to true so they get the visited link behavior by default.
Attachments
patch (1001 bytes, patch)
2010-02-03 16:43 PST, Adele Peterson
beidson: review+
Adele Peterson
Comment 1 2010-02-03 16:43:41 PST
Adele Peterson
Comment 2 2010-02-03 17:55:00 PST
Committed 54315 and 54316 -- since it looks like DRT relies on the feature being off.
Note You need to log in before you can comment on or make changes to this bug.