Fix for https://bugs.webkit.org/show_bug.cgi?id=34547 static shouldTrackVisitedLinks is not initialized

Reviewed by Brady Eidson.

For ports that don't call into WebKit to initialize this, 
we should initialize to true so they get the visited link behavior by default.

* page/PageGroup.cpp:



git-svn-id: svn://svn.chromium.org/blink/trunk@54313 bbb929c8-8fbe-4397-9dbb-9b2b20218538