third_party/WebKit/WebCore/page/PageGroup.cpp
@@ -52,7 +52,7 @@ static unsigned getUniqueIdentifier()
 
 // --------
 
-static bool shouldTrackVisitedLinks;
+static bool shouldTrackVisitedLinks = true;
 
 PageGroup::PageGroup(const String& name)
     : m_name(name)
